--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,53 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+}
+
+.Information{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  align-items: center;
+}
+
+.employees{
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+  flex-direction: column;
 }
 
-.App-link {
-  color: #61dafb;
+.employee{
+  width: 700px;
+  height: 100px;
+  border:  1px solid black;
+  margin: 10px;
+  display: flex;
+  padding: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.employee h3{
+  margin: 20px;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.Information input {
+  width: 500px;
+  height: 50px;
+  font-size: 20px;
+  padding-left: 10px;
+  margin: 5px;
+}
+
+button {
+  width: 200px;
+  height: 50px;
+  margin-top: 15px;
+}
+
+.Information button:hover{
+  cursor: pointer;
 }
