--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,7 +22,7 @@
 
 .employee{
   width: 700px;
-  height: 100px;
+  height: auto;
   border:  1px solid black;
   margin: 10px;
   display: flex;
@@ -34,7 +34,7 @@
   font-family: 'Courier New', Courier, monospace;
 }
 
-.Information input {
+input {
   width: 500px;
   height: 50px;
   font-size: 20px;
